--- a/Lang/english.ini
+++ b/Lang/english.ini
@@ -27,7 +27,7 @@ GameSlot_OverwriteConfirm = "Any Objections, Lady? (Confirm)"
 [GameOver]
 GameOver = "There's too many of them...."
 Continue = "Never give up, never surrender!"
-Exit = "Run. Away. Fast."
+Exit = "RageQuit"
 
 [GlobalOptions]
 Yes = "Yep"
@@ -320,8 +320,8 @@ Tester = "The Tester"
 Tester_Text = "The unit performs 360° live-fire tests of prototype weapons. Scans indicate the exterior armor is resistant to beam weaponry while the interior is further protected by an energy field that repels solid projectiles.# #Auto-repair systems in the cannons can mend all damage within seconds; schematics reveal these systems were applied due to earlier models' cannons being exposed to exceedingly violent tests. Similar to your Power Suit, the unit's modular design allows for the addition and removal of equipment."
 TankPrototype = "Tank Prototype"
 TankPrototype_Text = "Sensors on its head provide it with accurate aim; however, the alloy protecting it has weakened with time, along with the arm and track sections; Attacking these parts may grant you tactical advantages.# #Hardware scans reveal this tank was to be mass produced. Originally remote controlled, it is assumed that a basic A.I. is now active due to a lack of commands.# #A secondary scan indicates multiple life signatures inside of the mechanoid."
-Serris = "Serris"
-Serris_Text = "An amphibious predator capable of reaching ultra-high speeds, making it the fastest animal on SR388. The layer of skin on its underside serves as a respiratory organ and is sensitive to sudden drops in temperature. Its many eyes and segmented body allow great efficiency in vision and body movement.# #When a Serris moves to a new location, it digs passages to channel the water from its previous home to prevent dehydration. This behavior likely flooded the Distribution Center.# #Food preferences include live hornoads, moheeks, and bounty hunters."
+Serris = "Alaskan Bull Worm"
+Serris_Text = "An amphibious predator capable of reaching ultra-high speeds, making it the fastest animal on SR388. The layer of skin on its underside serves as a respiratory organ and is sensitive to sudden drops in temperature. Its many eyes and segmented body allow great efficiency in vision and body movement.# #When a Serris moves to a new location, it digs passages to channel the water from its previous home to prevent dehydration. This behavior likely flooded the Distribution Center.# #Food preferences include live hornoads, moheeks, squirrels, and bounty hunters."
 Genesis = "Genesis"
 Genesis_Text = "An ambush predator. This blind animal has adapted to hunt in the dark, relying on specialized senses to stalk prey. Its body offers little protection and will attempt to conceal itself in the shadows as a result. Its acidic blood is used as a projectile via autohemorraging.# #The Genesis naturally hunts in groups, making it a highly successful species with little need to evolve; Its DNA suggests it belongs to the oldest living lineage on SR388, granting its name. Eats hornoads for breakfast."
 
@@ -453,7 +453,7 @@ Ex = "Below are all the fields that were added to the language file in the updat
 [Title-Additions]
 GameSlot_NewGame_NormalGame = "Story Mode"
 GameSlot_NewGame_NewGamePlus = "Open World"
-GameSlot_NewGame_RandomGamePlus = "Random Game+"
+GameSlot_NewGame_RandomGamePlus = "Scrambled"
 GameSlot_NewGame_ClassicMode = "Classic Mode"
 GameSlot_NewGame_PowerupsOnly = "Power-ups Only"
 GameSlot_NewGame_StartingPaths = "Starting Paths"
