--- a/Lang/english.ini
+++ b/Lang/english.ini
@@ -5,7 +5,7 @@ Author2 ="Sorry, other laguages are unchanged"
 Version = "V1"
 
 [Title]
-ControllerRecommended = "A CONTROLLER IS RECOMMENDED #but keyboards are cool!"
+ControllerRecommended = "PRIOR FUSION MODE EXPERIENCE IS RECCOMMENDED #Embrace the challenge"
 BasedOnAGameBy = "A mod of a fangame based on a game by"
 PressStart = "Press Start"
 Options = "Options"
@@ -429,7 +429,7 @@ Save27 = "Autoad Quarantine"
 ClearTime = "Hours Logged"
 ItemCollection = "Completionist Rating"
 SeeYouNextMission = "UNTIL NEXT TIME!"
-TheLastMonster = "THE LAST SYPHONZOA IS IN CAPTIVITY,#BUT WHAT ABOUT THE BUFO?"
+TheLastMonster = "THANK YOU FOR PLAYING THE HORDE MOD!#THIS IS THE END OF THE GAME.#I HOPE YOU ENJOYED IT.#NO FROGS OR TOADS WERE HARMED#IN THE MAKING OF THIS MOD.#THERE WAS SUPPOSED TO BE A#FUNNY NEW ENDING AFTER#THIS TEXT, BUT I WAS TIRED OF#LOOKING AT HORNOADS, AND NEEDED#TO MOVE ON TO OTHER PROJECTS.#HORNOADS WOULD DANCE TO SOME RAVE MUSIC,#DID YOU FIND ALL THE SECRETS?"
 ToBeContinued = "To be continued...?"
 
 [Notifications]
